--- a/templates/index.html
+++ b/templates/index.html
@@ -206,6 +206,7 @@
                     <div class="mb-3">
                       <label class="form-label">Transcript language</label>
                       <select class="form-select" id="defaultLanguageSelect">
+                        <option value="auto">Auto (detected)</option>
                         <option value="English">English</option>
                         <option value="Cantonese">Cantonese</option>
                         <option value="Mandarin Chinese">Mandarin Chinese</option>
@@ -214,6 +215,7 @@
                     <div class="mb-3">
                       <label class="form-label">Summary language</label>
                       <select class="form-select" id="summaryLanguageSelect">
+                        <option value="auto">Auto (detected)</option>
                         <option value="English">English</option>
                         <option value="Cantonese">Cantonese</option>
                         <option value="Mandarin Chinese">Mandarin Chinese</option>
